Add docker support to api

--- a/backend/Energy.Api/src/Host/Energy.Host.csproj
+++ b/backend/Energy.Api/src/Host/Energy.Host.csproj
@@ -1,10 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>fc6eacb6-b5e1-4986-aca9-ad0e0636a6dd</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,5 +21,5 @@
   <ItemGroup>
     <ProjectReference Include="..\modules\Energy.Contracts\Energy.Contracts.csproj" />
   </ItemGroup>
-
+  
 </Project>
