--- a/backend/Energy.Api/src/Host/appsettings.Development.json
+++ b/backend/Energy.Api/src/Host/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=user;Password=password;Host=localhost;Port=5432;Database=proximaenergia;"
   }
 }
