--- a/backend/Energy.Api/src/Host/appsettings.json
+++ b/backend/Energy.Api/src/Host/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=user;Password=password;Host=localhost;Port=5432;Database=proximaenergia;Connection Lifetime=0;"
+    "DefaultConnection": "User ID=user;Password=password;Host=postgres;Port=5432;Database=proximaenergia;"
   }
 }
