--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
       - ASPNETCORE_URLS=http://+:5073
       - ASPNETCORE_HTTP_PORTS= 5073
       # Comment the next line to remove swagger and development configuration
-      - ASPNETCORE_ENVIRONMENT=Development
+      #- ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=User ID=user;Password=password;Host=postgres;Port=5432;Database=proximaenergia
 
     depends_on:
